# pharmacy-to-shopify

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUALITY_CHECKLIST.md  README.md  SHOPIFY_IMPORT_READINESS.md  STAFF_ENGINEERING_REVIEW.md  TODO.md  bulk_extract.py  cleanup_tags.py  configure_shopify_filters.py  create_shopify_collections.py  create_shopify_menus.py  discover_urls.py  docker-compose.yml  export_by_brand.py  extract_single.py  google_ads_auth.py  google_ads_auth_flow.py  google_ads_create_account.py  google_ads_pmax.py  pyproject.toml  requirements-dev.txt  requirements.txt  shopify_delete_products.py  shopify_oauth.py
.github/: PULL_REQUEST_TEMPLATE.md
config/: categories.yaml  google-ads.yaml  google-ads.yaml.example  known_brands.yaml  promotional_patterns.yaml  seo_settings.yaml  tag_normalization.yaml  vendor_defaults.yaml
docs/: ACHIEVING_1_TO_1_SYNC.md  ARCHITECTURE.md  BACKLOG.md  BARCODE_EXTRACTION_IMPROVEMENTS.md  SHOPIFY_THEME_RESTORATION_GUIDE.md  TESTING_AND_VALIDATION.md  configuration.md  data-fields.md  features.md  google-ads-claude-guide.md  google-ads-dsa-optimization-checklist.md  google-ads-playbook.md  google-ads.md  workflow-examples.md
scripts/: add_competitor_negatives.js  add_ivf_images.py  backup_theme.py  bulk_extract.py  chunk_csv.py  cleanup_tags.py  configure_shopify_filters.py  create_blog_post.py  create_ivf_products.py  create_sale_collection.py  create_shopify_collections.py  create_shopify_menus.py  create_welcome_discount.py  dedup_csv.py  demo.py  discover_urls.py  dsa_daily_report.py  export_by_brand.py  extract_single.py  google_ads_auth.py  google_ads_auth_flow.py  google_ads_create_account.py  google_ads_pmax.py  (+15 more)
(+414 files in other folders)
